# capest

./: Cargo.toml  README.md
examples/ex1/: extract.sh
examples/ex1/etc/: capest.cfg
octave/: check_layers.m
src/: common.rs  config.rs  disk.rs  gerber.rs  interpol.rs  main.rs  math.rs  math_random.rs  ndarray_image.rs  progress.rs  spherical.rs  test_gerber.rs  xorwow.rs
