[package]
name = "capest"
version = "0.1.0"
edition = "2021"
authors = ["Berke Durak <bd@exhrd.fr>"]

[dependencies]
# rand = "^0.7"
num = { version = "^0.4" }
ndarray = { version = "^0.15" }
ndarray-rand = { version = "^0.14" }
ndarray-image = { version = "^0.3" }
ndarray-linalg = { version = "^0.14.1", features = ["openblas-system"] }
ndarray-stats = "^0.3"
nalgebra = { version = "^0.30.1" }
hdf5 = { version = "^0.8.1" }
serde = { version = "1", features = ["serde_derive"] }
image = { version = "^0.23" }
rayon = { version = "^1.5" }
pico-args = { version = "^0.5" }